--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <nav>
        {% block nav %}
        <ul>
-            <li><a href="/">Home</a></li>
+            <li><a class="active" href="/">Home</a></li>
             <li><a href="/signup/">Signup</a></li>
             <li><a href="/login/">Login</a></li>
             <li style="float:right"><a href="/logout/">Logout</a></li>
