--- a/templates/base.html
+++ b/templates/base.html
@@ -5,14 +5,19 @@
    <title>{% block title %}My TV show platform{% endblock %}</title>
 </head>
 <body>
-<header>TV show Platform</header>
+
     <nav>
        {% block nav %}
+        
        <ul>
             <li><a class="active" href="/">Home</a></li>
             <li><a href="/signup/">Signup</a></li>
             <li><a href="/login/">Login</a></li>
             <li style="float:right"><a href="/logout/">Logout</a></li>
+           {% if user.is_authenticated %}
+           <li><a href="/search/">Search</a></li>
+           {% endif %}
+           <li style="float:none"><a>My TV show Platform</a></li>
        </ul>
        {% endblock %}
    </nav>
