--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
             <li style="float:right"><a href="/logout/">Logout</a></li>
            {% if user.is_authenticated %}
            <li><a href="/search/">Search</a></li>
+           <li><a href="/favorites/">Favorites</a></li>
            {% endif %}
            <li style="float:none"><a>My TV show Platform</a></li>
        </ul>
