--- a/webapp/templates/webapp/favorites.html
+++ b/webapp/templates/webapp/favorites.html
@@ -7,14 +7,14 @@
 Your favorite series {{ user.username }}:
 <br />
 <br />
-{% for serie in liste_dico_serie %}
+{% for serie in dict_series %}
 	<b><p>{{ serie.name }}</p></b>
 	<p>{{ serie.overview }}</p>
 	<p>Next episode date :{{ serie.next_episode_date }}</p>
 	<p>Next episode :{{ serie.next_episode }}</p>
 	<p>Last episode date:{{ serie.last_episode_date }}</p>
 	<p>Last episode :{{ serie.last_episode }}</p>
-	<p><a href="{% url 'favorites' %}">More info</a></p>
+	<p><a href="/serieinfo/{{ serie.id }}"> More info</a></p>
 	<br />
 {% endfor %}
 {% else %}
