--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,9 +43,14 @@ li a:hover {
     font: 14px Futura;
 }
 
+.wrapper{
+    display:flex;
+    flex-wrap:wrap;
+}
+
 .container {
     position: relative;
-    width: 50%;
+    width: 25%;
 }
 
 .image {
