--- a/webapp/templates/webapp/favorites.html
+++ b/webapp/templates/webapp/favorites.html
@@ -10,6 +10,7 @@ Your favorite series {{ user.username }}:
 
 <br />
 <br />
+<div class="wrapper">
 {% for serie in dict_series.values %}
 	<div class="container">
 		   	
@@ -17,8 +18,11 @@ Your favorite series {{ user.username }}:
 		   	
 		   	<div class="middle" >
 		   		<div class="text" >		
-			<a href="/serieinfo/{{ serie.id }}"> 
+			<a href="/serieinfo/{{ serie.id }}">
 		   		{{ serie.name }}</a></div>
+		   		<br />
+<br />
+<button id="monBoutton" onclick="remove_favorite({{serie.id}}, {{user.id}})">Remove from favourites !</button>
 		   	</div>
 		   </div>
 <!-- 	<b><p> <a href="/serieinfo/{{ serie.id }}">{{ serie.name }}</a></p></b>
@@ -30,7 +34,40 @@ Your favorite series {{ user.username }}:
 	<p><a href="/serieinfo/{{ serie.id }}"> More info</a></p> -->
 	<br />
 
+
+
+
+
 {% endfor %}
+</div>
+<script>
+/*var element = document.getElementById("monBoutton"); // Retrouver l element dans le DOM
+var event = "click"; // Evenement que l on veut detecter
+// Qu'est ce que on execute lorsque "click" est généré dans mon element.
+var handler = function(e) {
+	console.log(e);
+	// Je veux envoyer une requette http (POST)
+	add_favorite({{serie.id}},{{user.id}});
+};
+element.addEventListener(event, handler);*/
+
+
+function remove_favorite(id,user_id) {
+    const Http = new XMLHttpRequest();
+	const url='/search/'+id+'/remove_favorites/'+user_id;
+	Http.open("GET", url);
+	Http.send();
+
+	Http.onreadystatechange = function(e) {
+		console.log(Http);
+		console.log(Http.responseText);
+	};
+
+}
+
+
+</script>
+
 {% else %}
 Vous devez être connecté !
 {% endif %}
