--- a/webapp/templates/webapp/search_result.html
+++ b/webapp/templates/webapp/search_result.html
@@ -40,6 +40,7 @@
 -->
 <!--
    <tbody>Corps du tableau -->
+   	<div class="wrapper">
    {% for serie in dict_series.values %}
 		<!--<tr>
 		   <td>-->
@@ -50,6 +51,10 @@
 		   	<div class="middle" >
 		   		<div class="text" >		
 <a href="/serieinfo/{{ serie.id }}"> {{ serie.name }}</a></div>
+<br />
+<br />
+<button id="monBoutton" onclick="add_favorite({{serie.id}}, {{user.id}})">Add to favourites !</button>
+
 		   	</div>
 		   </div>
 		   
@@ -71,7 +76,8 @@
 
 
 
-	{% endfor %}     
+	{% endfor %}
+	</div>     
 <!-- </tbody>
 </table>
 -->
@@ -86,26 +92,6 @@ var handler = function(e) {
 	add_favorite({{serie.id}},{{user.id}});
 };
 element.addEventListener(event, handler);*/
-
-/*
-const sqlite3=require('sqlite3').verbose();
-let db = new sqlite3.Database('../db.sqlite3');
-
-let sql = `UPDATE webapp_profil
-            SET favorites = id
-            WHERE user_id = {{user_id}}`;
-
-db.run(sql, data, function(err) {
-  if (err) {
-    return console.error(err.message);
-  }
-  console.log(`Row(s) updated: ${this.changes}`);
- 
-});
- 
-// close the database connection
-db.close();
-*/
 
 
 function add_favorite(id,user_id) {
@@ -122,23 +108,6 @@ function add_favorite(id,user_id) {
 }
 
 
-/*
-
-	$.ajax({
-        data: data,
-        type: "POST",
-        // include URL
-        url: 'url/to/post/to',
-        // include response handler here
-        success: function(response) {
-            // do whatever you want with response
-            // you can just console.log(response.data) first
-        },
-        error: function(response) {
-            // error handler to failed AJAX requests
-        } 
-      });
-*/
 </script>
 {% endif %}
 {% endblock %} 
