Nouvelle version avec plus de POO et un début de notifications

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
            <li><a href="/search/">Search</a></li>
 		   <li><a href="/favorites/">Favorite series</a></li>
 		   <li><a href="/trending/">Trending</a></li>
+		   <li><a href="/profile/">Profile</a></li>
            {% endif %}
            <li style="float:none"><a>My TV show Platform</a></li>
        </ul>
