better display of serieinfo, noimg stored

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
            {% if user.is_authenticated %}
            <li><a href="/search/">Search</a></li>
            <li><a href="/favorites/">Favorites</a></li>
-           <li><a href="/trending/">Trending</a></li>
+           <li><a href="/trending/1">Trending</a></li>
            {% endif %}
            <li style="float:none"><a>My TV show Platform</a></li>
        </ul>
