--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,17 @@
+body{
+    background-color: #f2f2f2;
+    margin: 0;
+    font: 16px Futura;
+
+}
+
+p {
+  font: 16px Futura;
+}
 
 section { 
     display: block;
-    background-color: white;}
+    background-color:  #f2f2f2;}
 
 ul {
     list-style-type: none;
@@ -34,7 +44,104 @@ li a:hover {
 
 .title_nav
 {
-    float:none
+    float:none;
+}
+
+/* for the serieinfo img*/
+.serieinfo {
+      box-shadow: 10px 10px grey;
+      width: 654px;
+      margin-left: auto;
+      margin-right: auto;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+
+.serie_header {
+  background-color:#404040;
+  width: 655px;
+  margin-left: auto;
+  margin-right: auto;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #ddd;
+  border-top: 0;
+  color:white;
+ /* text-align:center;*/
+}
+
+.serie_header h3 {
+  /*text-align:left;*/
+  font: 24px Futura;
+  text-align: center;
+  color:white;
+/*  margin-left: 10px;*/
+  margin-top: 0px;
+  background-color:#404040;
+
+}
+
+
+.media{
+  display:flex;
+  justify-content: center
+}
+
+.img_info
+{
+    height: 345px;
+    width: 233px;
+}
+
+.img_info img
+{
+  width: 100%;
+  height: 100%;
+  border-width: 1px;
+  border-style: inset;
+  border-color: initial;
+  border-image: initial;
+  
+
+}
+
+.frame {
+  position:relative;
+  width: 420px;
+  height: 345px;
+}
+
+.frame iframe{
+  position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+border-width: 1px;
+}
+
+.text_info {
+    width: 654px;
+    margin-left: auto;
+    margin-right: auto;
+/*    margin-bottom: 40px;*/
+    background-color: gray;
+}
+
+/* aliceblue */
+.text_info p {
+  color:#F0F8FF;
+  margin-left: 10px;
+}
+
+
+h3{
+  text-align: center;
+  font: 20px Futura;
+}
+
+.similarserie {
+  background-color: lightgrey
 }
 
 
@@ -43,6 +150,12 @@ li a:hover {
     font: 14px Futura;
 }
 
+.wrapper_info {
+  display: flex;
+  justify-content: space-around;
+/*  flex-wrap:wrap;*/
+  }    
+
 .wrapper{
     display:flex;
     flex-wrap:wrap;
@@ -50,7 +163,7 @@ li a:hover {
 
 .container {
     position: relative;
-    width: 25%;
+    width: 20%;
 }
 
 .image {
@@ -86,4 +199,74 @@ li a:hover {
   color: white;
   font-size: 16px;
   padding: 16px 32px;
+}
+
+a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+    color:#585858;
+}
+
+a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+
+
+.previous {
+    background-color: #f1f1f1;
+    color: black;
+}
+
+.next {
+    background-color: #4CAF50;
+    color: white;
+}
+
+
+/*.searchbar input[type=text] {
+  padding: 6px;
+  margin-top: 8px;
+  font-size: 17px;
+  margin-bottom:30px;
+  border: none;
+}*/
+
+.searchbar input[type=text] {
+  height: 25px;
+}
+
+.searchbar button {
+
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.searchbar button:hover {
+  background: #ccc;
+}
+
+
+.searchbar input[type=submit] {
+    padding: 6px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 16px;
+    margin-bottom:30px;
+    font-size: 17px;
+    width: 130px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+}
+
+.searchbar input[type=text]:focus {
+    width: 100%;
 }
