--- a/webapp/templates/webapp/serieinfo.html
+++ b/webapp/templates/webapp/serieinfo.html
@@ -2,26 +2,60 @@
 {% block title %}Sign up page for My Serie Platform{% endblock %}
 {% block content %}
 {% if user.is_authenticated %}
-<br />
-<br />
-<img src={{ serie_info.poster_path }}>
-<b><p>{{ serie_info.name }}</p></b>
-<p>{{ serie_info.overview }}</p>
-<p>Next episode date : {{ serie_info.next_episode_date }}</p>
-<p>Next episode : {{ serie_info.next_episode }}</p>
-<p>Last episode date: {{ serie_info.last_episode_date }}</p>
-<p>Last episode : {{ serie_info.last_episode }}</p>
-<p>Number of seasons : {{ serie_info.nb_seasons }}</p>
-<p>Number of episodes : {{ serie_info.nb_episodes }}</p>
-<br />
-{% for season in serie_info.seasons %}
 
-	<p><a href="/serieinfo/{{ serie_info.id }}/seasoninfo/{{ season.season_number }}"> {{ season.name }}</a></p>
+<div class="serieinfo">
+  <div class="serie_header">
+    <br/>
+<h3>{{ serie_info.name }}</h3>
+    <div class="wrapper_info">
+    {% for genre in serie_info.genres %}
+    <p><a style="color:#F0F8FF" href="/genre/{{genre.name}}/{{genre.id}}/1"> {{ genre.name }} </a></p>
+    {% endfor %}
+  </div>
+
+<!-- ici ajouter aussi note-->
+
+
+</div>
+<div class="media">
+<div class="img_info">
+<img src={{ serie_info.poster_path }}>
+</div>
+<div class="frame">
+{% if serie_info.video == None %}
+<img style="width: 420px;
+  height: 345px;" src="../../static/img/no_image.png">
+{% else %}
+<iframe src={{serie_info.video}} allowFullScreen></iframe>
+{% endif %}
+</div>
+
+</div>
+<div class="text_info">
+  <br/>
+<p style="font-style:italic; margin-top: 0;margin-bottom: 30px">{{ serie_info.overview }}</p>
+{% if serie_info.next_episode_date == None or serie_info.next_episode_date == 'Not known' %}
+<p style="margin-bottom: 2px"><b>No next episode scheduled</p>
+{% else %}
+<p style="margin-bottom: 2px"><b>Next episode : </b>{{ serie_info.next_episode }} on {{ serie_info.next_episode_date }}</p>
+{% endif %}
+<p style="margin-top: 4px"><b>Last episode : </b>{{ serie_info.last_episode }} on {{ serie_info.last_episode_date }}</p>
+<p style="margin-bottom: 2px"><b>Seasons and episode Browser</b></p>
+<p style="margin-top: 2px">{{ serie_info.nb_episodes }} episodes<p>
+
+<div style="margin-top:2px" class="wrapper">
+{% for season in serie_info.seasons %}
+	<p><a style="color:#F0F8FF" href="/serieinfo/{{ serie_info.id }}/seasoninfo/{{ season.season_number }}"> {{ season.name }}</a></p>
 {% endfor %}
 <br />
+</div>
+</div>
+</div>
 
-
-<h3>Similar TV shows :</h3>
+<div class="similarserie">
+<br />
+<h3>Similar TV shows</h3>
+<br />
 <div class="wrapper">
 {% for serie in similar_series.values %}
 <div class="container">
@@ -40,35 +74,42 @@
 
   {% endfor %} 
 </div>
-
-
-<!-- <table>
-   <thead> --> <!-- En-tête du tableau -->
-       <!-- <tr>
-           <th>Name</th>
-           <th>Overview</th>
-           <th>Vote</th>
-           <th>First air date</th>
-           <th></th>
-       </tr>
-   </thead>
-
-   <tbody> --> <!-- Corps du tableau -->
-   <!-- {% for serie in similar_series %}
+</div>
 
 
 
 
-    <tr>
-      <td>{{ serie.name }}</td>]
-      <td>{{ serie.overview }}</td>
-      <td>{{ serie.vote_average }}</td>
-      <td>{{ serie.first_air_date }}</td>
-      <td><a href="/serieinfo/{{ serie.id }}"> More info</a></td>
-    </tr>
-	{% endfor %}       
-  </tbody>
-</table> -->
+
+<script>
+/*var element = document.getElementById("monBoutton"); // Retrouver l element dans le DOM
+var event = "click"; // Evenement que l on veut detecter
+// Qu'est ce que on execute lorsque "click" est généré dans mon element.
+var handler = function(e) {
+  console.log(e);
+  // Je veux envoyer une requette http (POST)
+  add_favorite({{serie.id}},{{user.id}});
+};
+element.addEventListener(event, handler);*/
+
+
+function add_favorite(id,user_id) {
+    const Http = new XMLHttpRequest();
+  const url='/search/'+id+'/add_favorites/'+user_id;
+  Http.open("GET", url);
+  Http.send();
+
+  Http.onreadystatechange = function(e) {
+    console.log(Http);
+    console.log(Http.responseText);
+  };
+
+}
+
+
+</script>
+
+
+
 {% else %}
 Vous devez être connecté !
 {% endif %}
