--- a/webapp/templates/webapp/trending.html
+++ b/webapp/templates/webapp/trending.html
@@ -4,10 +4,8 @@
 {% if user.is_authenticated %}
 
 <br />
-<br />
-The trending series today are:
-<br />
-<br />
+<h3>Most popular series:</h3>
+
 
 <!-- <table>
    
@@ -50,9 +48,52 @@ The trending series today are:
 		   <td><a href="/serieinfo/{{ serie.id }}"> More info</a></td>
        </tr> -->
 	{% endfor %}  
-  </div>     
-<!--    </tbody>
-</table> -->
+  </div>
+
+
+
+<h3>Browse pages</h3>
+
+{% if page == 1 %}
+<a href="/trending/{{next_page}}" class="next">Next &raquo;</a>
+
+{% elif page == number_pages %}
+<a href="/trending/{{previous_page}}" class="previous">&laquo; Previous</a>
+
+{% else %}
+<a href="/trending/{{previous_page}}" class="previous">&laquo; Previous</a>
+<a href="/trending/{{next_page}}" class="next">Next &raquo;</a>
+{% endif %}
+
+
+<script>
+/*var element = document.getElementById("monBoutton"); // Retrouver l element dans le DOM
+var event = "click"; // Evenement que l on veut detecter
+// Qu'est ce que on execute lorsque "click" est généré dans mon element.
+var handler = function(e) {
+  console.log(e);
+  // Je veux envoyer une requette http (POST)
+  add_favorite({{serie.id}},{{user.id}});
+};
+element.addEventListener(event, handler);*/
+
+function add_favorite(id,user_id) {
+    const Http = new XMLHttpRequest();
+  const url='/search/'+id+'/add_favorites/'+user_id;
+  Http.open("GET", url);
+  Http.send();
+
+  Http.onreadystatechange = function(e) {
+    console.log(Http);
+    console.log(Http.responseText);
+  };
+
+}
+
+
+</script>
+
+
 
 {% else %}
 Vous devez être connecté !
