--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,8 +53,9 @@ li a:hover {
       width: 654px;
       margin-left: auto;
       margin-right: auto;
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
+      box-shadow: 0 0.3em 1em #000;
+      /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+*/
 }
 
 .serie_header {
@@ -141,7 +142,8 @@ h3{
 }
 
 .similarserie {
-  background-color: lightgrey
+  background-color: lightgrey;
+  box-shadow: 0 0.3em 1em #000;
 }
 
 
@@ -181,6 +183,9 @@ h3{
   position: absolute;
   top: 50%;
   left: 50%;
+  right: 50%;
+  width: 80%;
+    height: 85%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   text-align: center;
@@ -197,9 +202,101 @@ h3{
 .text {
   background-color: #4CAF50;
   color: white;
-  font-size: 16px;
-  padding: 16px 32px;
+/*  font-size: 16px;
+  padding: 16px 32px;*/
+
+
+      display: inline-block;
+    top: 20%;
+    left: 20%;
+    width: 100%;
+    height: 65%;
 }
+
+.text a {
+    margin-bottom: 50%;
+    margin-top: 20%;
+    height: 50%;
+    width: 50%;
+    text-align: center;
+}
+
+
+
+.popup button {
+      transition: width 0.4s ease-in-out;
+      width: 100%;
+     padding: 6px;
+    border: none;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.popup button:hover{
+    cursor: pointer;
+    cursor: hand;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+/*    background-color: red;*/
+}
+
+.popup button:focus{
+  background-color: red;
+}
+
+.popup .popuptext {
+    visibility: hidden;
+    width: 160px;
+    background-color: #555;
+    color: #fff;
+    padding: 4% 0;
+    z-index: 1;
+    position: absolute;
+/*    bottom:0.2%;*/
+    right: 4%;
+    border-radius: 6px;
+/*    color: #555;*/
+    text-align: center;
+/*    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -80px;*/
+}
+
+.popup .popuptext::after {
+    content: "";
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent #555 transparent;
+}
+
+/*hide and show popup*/
+.popup .show{
+    visibility: visible;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s;
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+    from {opacity: 0;} 
+    to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+}
+
 
 a {
     text-decoration: none;
