--- a/webapp/templates/webapp/trending.html
+++ b/webapp/templates/webapp/trending.html
@@ -43,10 +43,10 @@
 <br />
 <br />
 
-<div class="popup" onclick="show_popup()">
+<!-- <div class="popup" onclick="show_popup()"> -->
 <button id="monBoutton" onclick="add_favorite({{serie.id}}, {{user.id}})">Add to favourites !</button>
-<span class="popuptext" id="myPopup">Added to your favorites</span></div>
-
+<!-- <span class="popuptext" id="myPopup">Added to your favorites</span></div>
+ -->
         </div>
        </div>
 
