--- a/webapp/templates/webapp/serieinfo.html
+++ b/webapp/templates/webapp/serieinfo.html
@@ -12,11 +12,9 @@
     <p><a style="color:#F0F8FF" href="/genre/{{genre.name}}/{{genre.id}}/1"> {{ genre.name }} </a></p>
     {% endfor %}
   </div>
-
-<!-- ici ajouter aussi note-->
-
-
+<!-- ici ajouter aussi note donnéee à la série ? -->
 </div>
+
 <div class="media">
 <div class="img_info">
 <img src={{ serie_info.poster_path }}>
