--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,6 @@
+
+/* Quelques styles classiques par éléments globaux */
+
 body{
     background-color: #f2f2f2;
     margin: 0;
@@ -33,13 +36,58 @@ li a {
     text-decoration: none;
 }
 
-/* Change the link color to #111 (black) on hover */
-li a:hover {
-    background-color: #111;
+.w3-button{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+
 }
 
+/* Le lien devient noir (#111) lorsque la souris passe dessus */
+li a:hover {
+    background-color: #111;
+    color:white;
+}
+
+ul .nav-dropdown {
+  position: absolute;
+  z-index: 1;
+  box-shadow: 0 3px 12px rgba(0, 0, 0, 0.15);
+}
+
+h3{
+  text-align: center;
+  font: 20px Futura;
+}
+
+a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+    color:#585858;
+}
+
+a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.notification .badge {
+  position: relative;
+  top: -9px;
+  right: 10px;
+  padding: 3px 6px;
+  border-radius: 50%;
+  background: red;
+  color: white;
+} 
+
+/* Quelques styles pour la barre de navigation supérieure commune à toutes les vues (couleur noire lorsque souris passe dessus)*/
 .active {
     background-color: #4CAF50;
+    color: white;
 }
 
 .title_nav
@@ -47,17 +95,21 @@ li a:hover {
     float:none;
 }
 
-/* for the serieinfo img*/
+
+
+
+
+/* Page serieinfo */
+/*commun à toute la partie sur les infos de la série*/
 .serieinfo {
       box-shadow: 10px 10px grey;
       width: 654px;
       margin-left: auto;
       margin-right: auto;
       box-shadow: 0 0.3em 1em #000;
-      /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-*/
 }
 
+/*bloc titre et genre de la série*/
 .serie_header {
   background-color:#404040;
   width: 655px;
@@ -68,26 +120,29 @@ li a:hover {
   border-color: #ddd;
   border-top: 0;
   color:white;
- /* text-align:center;*/
 }
-
+/*titre de la série*/
 .serie_header h3 {
-  /*text-align:left;*/
   font: 24px Futura;
   text-align: center;
   color:white;
-/*  margin-left: 10px;*/
   margin-top: 0px;
   background-color:#404040;
-
 }
 
+/* pour que les genres de la série s'affiche proprement*/
+.wrapper_info {
+  display: flex;
+  justify-content: space-around;
+  }    
 
+/* bloc avec image et video */
 .media{
   display:flex;
   justify-content: center
 }
 
+/* partie image de serieinfo*/
 .img_info
 {
     height: 345px;
@@ -102,10 +157,10 @@ li a:hover {
   border-style: inset;
   border-color: initial;
   border-image: initial;
-  
-
 }
 
+
+/* Partie vidéo de serieinfo*/
 .frame {
   position:relative;
   width: 420px;
@@ -121,11 +176,11 @@ height: 100%;
 border-width: 1px;
 }
 
+/* informations sur la série */
 .text_info {
     width: 654px;
     margin-left: auto;
     margin-right: auto;
-/*    margin-bottom: 40px;*/
     background-color: gray;
 }
 
@@ -135,11 +190,7 @@ border-width: 1px;
   margin-left: 10px;
 }
 
-
-h3{
-  text-align: center;
-  font: 20px Futura;
-}
+/* Bloc série similaire dans la page serieinfo*/
 
 .similarserie {
   background-color: lightgrey;
@@ -147,16 +198,46 @@ h3{
 }
 
 
-/*for search_result image*/
+/* Partie seasoninfo */
+.season_info {
+  box-shadow: 0 0.3em 1em #000;
+  background-color: gray;
+}
+
+.season_info img {
+    height: 345px;
+    width: 233px;
+}
+
+.season_info.info {
+      display: flex;
+}
+
+/* Partie d'affichage de tous les épisodes de la saison */
+.episodes_info {
+      box-shadow: 2px 2px 5px 0px #656565;
+      width: 654px;
+      background-color: lightgrey;
+      margin-left: auto;
+      margin-right: auto;
+      background-color: 
+      box-shadow: 0 0.3em 1em #000;
+}
+
+.episodes_info.info{
+  display:flex;
+}
+
+.ep_container{
+  width: 60%;
+  position:relative;
+}
+
+
+/* Affichage de 5 images par ligne avec images, possibilté de l'ajouter aux favoris et d'avoir plus d'infos sur la série */
 #content{
     font: 14px Futura;
 }
-
-.wrapper_info {
-  display: flex;
-  justify-content: space-around;
-/*  flex-wrap:wrap;*/
-  }    
 
 .wrapper{
     display:flex;
@@ -202,11 +283,7 @@ h3{
 .text {
   background-color: #4CAF50;
   color: white;
-/*  font-size: 16px;
-  padding: 16px 32px;*/
-
-
-      display: inline-block;
+    display: inline-block;
     top: 20%;
     left: 20%;
     width: 100%;
@@ -221,9 +298,7 @@ h3{
     text-align: center;
 }
 
-
-
-.text button {
+.middle button {
       transition: width 0.4s ease-in-out;
       width: 100%;
      padding: 6px;
@@ -235,82 +310,19 @@ h3{
     user-select: none;
 }
 
-.text button:hover{
+.middle button:hover{
     cursor: pointer;
     cursor: hand;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 /*    background-color: red;*/
 }
 
-.text button:focus{
+.middle button:focus{
   background-color: red;
 }
 
-.popup .popuptext {
-    visibility: hidden;
-    width: 160px;
-    background-color: #555;
-    color: #fff;
-    padding: 4% 0;
-    z-index: 1;
-    position: absolute;
-/*    bottom:0.2%;*/
-    right: 4%;
-    border-radius: 6px;
-/*    color: #555;*/
-    text-align: center;
-/*    border-radius: 6px;
-    padding: 8px 0;
-    position: absolute;
-    z-index: 1;
-    bottom: 125%;
-    left: 50%;
-    margin-left: -80px;*/
-}
 
-.popup .popuptext::after {
-    content: "";
-    position: absolute;
-    bottom: 100%;
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: transparent transparent #555 transparent;
-}
-
-/*hide and show popup*/
-.popup .show{
-    visibility: visible;
-    -webkit-animation: fadeIn 1s;
-    animation: fadeIn 1s;
-}
-
-/* Add animation (fade in the popup) */
-@-webkit-keyframes fadeIn {
-    from {opacity: 0;} 
-    to {opacity: 1;}
-}
-
-@keyframes fadeIn {
-    from {opacity: 0;}
-    to {opacity:1 ;}
-}
-
-
-a {
-    text-decoration: none;
-    display: inline-block;
-    padding: 8px 16px;
-    color:#585858;
-}
-
-a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-
+/* bouton pour aller à la page précédente ou suivant en bas de page (rajouter en haut de page aussi */
 
 .previous {
     background-color: #f1f1f1;
@@ -323,13 +335,7 @@ a:hover {
 }
 
 
-/*.searchbar input[type=text] {
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 17px;
-  margin-bottom:30px;
-  border: none;
-}*/
+/* Pour la page search_result */
 
 .searchbar input[type=text] {
   height: 25px;
@@ -351,7 +357,6 @@ a:hover {
   background: #ccc;
 }
 
-
 .searchbar input[type=submit] {
     padding: 6px;
     border: none;
@@ -365,5 +370,45 @@ a:hover {
 }
 
 .searchbar input[type=text]:focus {
-    width: 100%;
+    width: 70%;
+}
+
+
+
+.dropdown-menu{
+  top: 60px;
+  right: 0px;
+  left: unset;
+  width: 460px;
+  box-shadow: 0px 5px 7px -1px #c1c1c1;
+  padding-bottom: 0px;
+  padding: 0px;
+}
+.dropdown-menu:before{
+  content: "";
+  position: absolute;
+  right: 12px;
+  border:10px solid #343A40;
+  border-color: transparent transparent #343A40 transparent;
+}
+
+.notification-box{
+  padding: 10px 0px; 
+}
+
+@media (max-width: 640px) {
+    .dropdown-menu{
+      top: 50px;
+      left: -16px;  
+      width: 290px;
+    } 
+    .nav{
+      display: block;
+    }
+    .nav .nav-item,.nav .nav-item a{
+      padding-left: 0px;
+    }
+    .message{
+      font-size: 13px;
+    }
 }
