--- a/webapp/templates/webapp/seasoninfo.html
+++ b/webapp/templates/webapp/seasoninfo.html
@@ -2,20 +2,51 @@
 {% block title %}Sign up page for My Serie Platform{% endblock %}
 {% block content %}
 {% if user.is_authenticated %}
-<br />
-<br />
-<b><p>{{ season_info.name }}</p></b>
-	<p>{{ season_info.overview }}</p>
-	<p>Air date : {{ season_info.air_date }}</p>
-	<p>Number of episodes : {{ season_info.episode_count }}</p>
 
+<div class="season_info">
 <br />
+
+
+<h3 margin-top: 10%>{{ season_info.name }}</h3>
+<div class="season_info.info" style="margin-left:3%;display: flex;">
+	<img src={{season_info.poster_path}} alt="Avatar" class="image">
+
+	<div class="season_info.text" style="margin-left:3%;margin-top:3%"> 
+	<p  style="font-style:italic; margin-top: 0;margin-bottom: 30px;">{{ season_info.overview }}</p>
+	<p><b>Air date : </b>{{ season_info.air_date }}</p>
+	<p><b>Number of episodes : </b>{{ season_info.episode_count }}</p></div>
+</div>
+	<br /></div>
+
+
+
+<div class="episodes_info">
+	<br/>
+	<h3>View all episodes: </h3>
 {% for episode in season_info.episodes %}
-	<b><p>{{ episode.name }}</p></b>
-	<p>{{ episode.overview }}</p>
-	<p>Episode air date : {{ episode.air_date }}</p>
+<h4 style="margin-block-start: 2em;
+    margin-block-end: 1em; margin-left: 1%;">{{ episode.name }}</h4>
+<div class="episodes_info.info" style="margin-left: 3%;display:flex;">
+	
+	<div class="ep_container" style="width: 181px;height: 122px">
+        {% if episode.still_path == None  %}
+      <img  style="width: 181px;height: 122px" src="/static/img/no_image_available.png" alt="Avatar" class="image" >
+        
+        {% else %}
+          <img   style="width: 181px;height: 122px"src=" https://image.tmdb.org/t/p/w500{{ episode.still_path }}" alt="Avatar" class="image" >
+
+        {% endif %}
+      </div>
+<div class="episodes_info.text" style="margin-left:3%;">
+	<p style="font-style:italic;margin-block-start: 0em;">{{ episode.overview }}</p>
+	<p><b>Episode air date : </b>{{ episode.air_date }}</p>
+</div>
+
 	<br />
+</div>
 {% endfor %}
+<br />
+</div>
 {% else %}
 Vous devez être connecté !
 {% endif %}
