--- a/webapp/templates/webapp/trending.html
+++ b/webapp/templates/webapp/trending.html
@@ -5,26 +5,9 @@
 
 <br />
 <h3>Most popular series:</h3>
-
-
-<!-- <table>
-   
-   <thead> --> <!-- En-tête du tableau -->
-      <!--  <tr>
-           <th>Name</th>
-           <th>Overview</th>
-           <th>Vote</th>
-		   <th>First air date</th>
-		   <th></th>
-       </tr>
-   </thead>
-
-   <tbody> --> <!-- Corps du tableau -->
+<!-- Wrapper pour avoir le bon positionnement des séries en ligne (voir css ensuite pour le style affecté) -->
     <div class="wrapper">
    {% for serie in dict_series %}
-
-
-
    <div class="container">
         
         {% if serie.poster_path == None  %}
@@ -43,27 +26,15 @@
 <br />
 <br />
 
-<!-- <div class="popup" onclick="show_popup()"> -->
+<!-- Le boutton devient rouge lorsque l'on clique dessus ie. que la série a été ajoutée aux favoris -->
 <button id="monBoutton" onclick="add_favorite({{serie.id}}, {{user.id}})">Add to favourites !</button>
-<!-- <span class="popuptext" id="myPopup">Added to your favorites</span></div>
- -->
+
         </div>
        </div>
 
-
-<!-- 		<tr>
-           <td>{{ serie.name }}</td>
-           <td>{{ serie.overview }}</td>
-           <td>{{ serie.vote_average }}</td>
-		   <td>{{ serie.first_air_date }}</td>
-		   <td><a href="/serieinfo/{{ serie.id }}"> More info</a></td>
-       </tr> -->
 	{% endfor %}  
   </div>
 
-
-
-<h3>Browse pages</h3>
 
 {% if page == 1 %}
 <a href="/trending/{{next_page}}" class="next">Next &raquo;</a>
@@ -78,21 +49,7 @@
 
 
 <script>
-/*var element = document.getElementById("monBoutton"); // Retrouver l element dans le DOM
-var event = "click"; // Evenement que l on veut detecter
-// Qu'est ce que on execute lorsque "click" est généré dans mon element.
-var handler = function(e) {
-  console.log(e);
-  // Je veux envoyer une requette http (POST)
-  add_favorite({{serie.id}},{{user.id}});
-};
-element.addEventListener(event, handler);*/
-
 function add_favorite(id,user_id) {
-
-/*  var button=document.getElementById("monBoutton");
-  button.style.backgroundColor = #f44336;*/
-
   const Http = new XMLHttpRequest();
   const url='/search/'+id+'/add_favorites/'+user_id;
   Http.open("GET", url);
@@ -104,12 +61,6 @@ function add_favorite(id,user_id) {
   };
 
 };
-
-/*function show_popup(){
-      var popup = document.getElementById("myPopup");
-    popup.classList.toggle("show");
-}
-*/
 
 </script>
 
