--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,9 @@ p {
 
 section { 
     display: block;
-    background-color:  #f2f2f2;}
+    background-color:  #f2f2f2;
+
+  }
 
 ul {
     list-style-type: none;
@@ -327,11 +329,15 @@ border-width: 1px;
 .previous {
     background-color: #f1f1f1;
     color: black;
+    margin: 0.5%;
 }
 
 .next {
     background-color: #4CAF50;
     color: white;
+    float: right; 
+    margin: 0.5%;
+
 }
 
 
@@ -339,6 +345,7 @@ border-width: 1px;
 
 .searchbar input[type=text] {
   height: 25px;
+  width: 50%;
 }
 
 .searchbar button {
@@ -369,9 +376,9 @@ border-width: 1px;
     transition: width 0.4s ease-in-out;
 }
 
-.searchbar input[type=text]:focus {
+/*.searchbar input[type=text]:focus {
     width: 70%;
-}
+}*/
 
 
 
