--- a/webapp/templates/webapp/home.html
+++ b/webapp/templates/webapp/home.html
@@ -3,9 +3,22 @@
 {% block content %}
 {% if user.is_authenticated %}
 
-<br />
-<h3>Series airing today:</h3>
+<div class="intro">
+<h2>Welcome to My TV show Platform {{ user.username }} !</h2>
+<p style="font: 18px Futura ">
+  Here you can scroll the different series available and easily know which ones will air today and in the week. You'll have all the information about all series in our gigantic database ! Discover trailers and add series in your favorite list to retrieve them quickly and know exactly when new episodes will be released !
+<br/>
+<br/>
+<b>Enjoy !</b></p>
+</div>
 
+
+<br />
+
+<div class="today" style="background-color: lavender">
+  <br />
+<h3><b>Series airing today:</b></h3>
+<br />
     <div class="wrapper">
 {% for serie in dict_series1 %}
  <div class="container">
@@ -30,9 +43,13 @@
   {% endfor %}
 
   </div>
+  <br />
+</div>
 
+<div class="week">
 <br />
-<h3>Series on air this week:</h3>
+<h3><b>Series on air this week:</b></h3>
+<br />
 
     <div class="wrapper">
 
@@ -60,6 +77,7 @@
   {% endfor %}
 
   </div>
+</div>
 
 
 
