--- a/webapp/templates/webapp/serieinfo.html
+++ b/webapp/templates/webapp/serieinfo.html
@@ -18,7 +18,6 @@
     <p><a style="color:#F0F8FF" href="/genre/{{genre.name}}/{{genre.id}}/1"> {{ genre.name }} </a></p>
     {% endfor %}
   </div>
-<!-- ici ajouter aussi note donnéee à la série ? -->
 </div>
 
 <div class="media">
@@ -41,8 +40,17 @@
 {% if serie_info.next_episode_date == None or serie_info.next_episode_date == 'Not known' %}
 <p style="margin-bottom: 2px"><b>No next episode scheduled</p>
 {% else %}
+
+{% if serie_info.alert == 0 %}
+<p style="margin-bottom: 2px"><b>Next episode : </b>{{ serie_info.next_episode }} on {{ serie_info.next_episode_date }} airing today</p>
+{%  elif serie_info.alert == 1 %}
+<p style="margin-bottom: 2px"><b>Next episode : </b>{{ serie_info.next_episode }} on {{ serie_info.next_episode_date }} airing tomorrow</p>
+{% else %}
 <p style="margin-bottom: 2px"><b>Next episode : </b>{{ serie_info.next_episode }} on {{ serie_info.next_episode_date }} in {{serie_info.alert}} days</p>
+
 {% endif %}
+{% endif %}
+
 <p style="margin-top: 4px"><b>Last episode : </b>{{ serie_info.last_episode }} on {{ serie_info.last_episode_date }}</p>
 <p style="margin-bottom: 2px"><b>Seasons and episode Browser</b></p>
 <p style="margin-top: 2px">{{ serie_info.nb_episodes }} episodes<p>
@@ -93,17 +101,6 @@
 
 
 <script>
-/*var element = document.getElementById("monBoutton"); // Retrouver l element dans le DOM
-var event = "click"; // Evenement que l on veut detecter
-// Qu'est ce que on execute lorsque "click" est généré dans mon element.
-var handler = function(e) {
-  console.log(e);
-  // Je veux envoyer une requette http (POST)
-  add_favorite({{serie.id}},{{user.id}});
-};
-element.addEventListener(event, handler);*/
-
-
 function add_favorite(id,user_id) {
     const Http = new XMLHttpRequest();
   const url='/search/'+id+'/add_favorites/'+user_id;
